tests/snapshots/run_wpt_conformance__litert_triangular_float16_4D_tensor_fully_zero_options_upper_false_options_diagonal_-2.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
triangular.https.any.js triangular float16 4D tensor fully zero options.upper=false options.diagonal=-2, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: Triangular { input: 0, options: Some(MLTriangularOptions { label: "", upper: Some(false), diagonal: -2 }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    triangularInput: f16[2, 2, 2, 3];
  }

  nodes {
    [triangularOutput] = triangular(triangularInput, diagonal=-2, label="", upper=false);
  }

  outputs { triangularOutput; }
}
